--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.18",
+    "swiper": "^11.2.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
